# EmbyDesk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  apicall.cpp  apicall.h  appsettings.cpp  appsettings.h  conversions.hpp  dumpworker.cpp  dumpworker.h  embydumpdialog.cpp  embydumpdialog.h  embydumpdialog.ui  excelexport.cpp  excelexport.h  globals.h  jbimagecache.cpp  jbimagecache.h  lookupkeys.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metatypes.h  msys2_clangarm64_deploy.sh  msys2_ucrt64_deploy.sh  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  preferencesdialog.ui_bak  resource.qrc  sheets.hpp  splashdialog.cpp  splashdialog.h  splashdialog.ui  sqlreader.cpp  (+3 more)
models/: headertexts.h  homevideotreemodel.cpp  homevideotreemodel.h  movietreemodel.cpp  movietreemodel.h  musictreemodel.cpp  musictreemodel.h  musicvideotreemodel.cpp  musicvideotreemodel.h  seriestreemodel.cpp  seriestreemodel.h  statistics.h
